--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
           </div>
           
           <br><br><br>
-          
+
            <div class='testeL'>
             <div class='infoL'>
               <div class='point'></div>
@@ -234,15 +234,28 @@
           <h3>INSCREVA-SE</h3>
           <div class='container'>
             <div class='sing-center'>
-              <div class='ball' style='width: 125px; height: 125px; font-size: 28px;'>
-                <div class='middle' style='width: 150px;'>R$ 30,00</div>
+
+              <div class='line one'></div>
+              <div class='line two'></div>
+
+              <div class='ctBall' style='width: 125px;'>
+                <div class='ball' style='width: 125px; height: 125px; font-size: 28px;'>
+                  <div class='middle' style='width: 150px;'>R$ 30,00</div>
+                </div>
               </div>
-              <div class='ball' style='width: 75px; height: 75px; font-size: 18px;'>
-                <div class='middle' style='width: 75px;'>até 21/06</div>
+
+              <div class="ctBall" style='width: 75px; margin-top: -15px;'>
+                <div class='ball' style='width: 75px; height: 75px; font-size: 18px;'>
+                  <div class='middle' style='width: 75px;'>até 21/06</div>
+                </div>
               </div>
-              <div class='ball' style='background: #e9d6a0; box-shadow: 0 0 0 3px #e9d6a0; width: 100px; height: 100px; font-size: 20px;'>
-                <div class='middle' style='width: 100px;'>CLIQUE AQUI</div>
-              </div>
+
+              <div class="ctBall" style='width: 100px;'>
+                <div class='ball' style='background: #e9d6a0; box-shadow: 0 0 0 3px #e9d6a0; width: 100px; height: 100px; font-size: 20px;'>
+                  <div class='middle' style='width: 100px;'>CLIQUE AQUI</div>
+                </div>
+              </div>  
+
             </div>
           </div>
         </div>
