update hachathon, alteracao css e reidentacao do html

--- a/index.html
+++ b/index.html
@@ -58,9 +58,8 @@
           </div>
 
           <div id='anima'>
-            <div id='sun'>
-              <img src='img/nuvens.png' height='230' width='1296' style='position: absolute; left: 275px;'>
-            </div>
+            <div id='sun'></div>
+            <img src='img/nuvens.png' height='230' width='1296' style='position: absolute; left: 275px;'>
             <img id='bridge' src='img/ponte.png'>
             <div id='sand'></div>
             <div id='wave2'></div>
