--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <link href='http://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
     <link rel='stylesheet' href='http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
     <link rel='stylesheet' href='css/style.css' type='text/css' />
-    <script src='http://code.jquery.com/jquery-1.11.2.min.js'></script>
-    <script src='js/main.js'></script>
   </head>
   <body>
     <section id='main'>
@@ -285,45 +283,55 @@
           <div class='organizers container'>
 
             <div class='frame'>
-              <img src='./img/moldura.png'>
-              <img class='photo' src='./img/foto_henri.png'>
+              <canvas id="canvas-henricavalcante" width="214" height="245"></canvas>
               <div class='a face'>
-                <a href='#' target='_blank'><i class='fa fa-facebook'></i></a>
+                <a href='http://facebook.com/henricavalcante' target='_blank'><i class='fa fa-facebook'></i></a>
               </div>
               <div class='a git'>
-                <a href='#' target='_blank'><i class='fa fa-github'></i></a>
+                <a href='http://github.com/henricavalcante' target='_blank'><i class='fa fa-github'></i></a>
               </div>
             </div>
 
             <div class='frame'>
-              <img src='./img/moldura.png'>
+              <canvas id="canvas-yanjustino" width="214" height="245"></canvas>
               <div class='a face'>
-                <a href='#' target='_blank'><i class='fa fa-facebook'></i></a>
+                <a href='http://facebook.com/yanjustino' target='_blank'><i class='fa fa-facebook'></i></a>
               </div>
               <div class='a git'>
-                <a href='#' target='_blank'><i class='fa fa-github'></i></a>
-              </div>
-            </div> 
-
-            <div class='frame'>
-              <img src='./img/moldura.png'>
-              <div class='a face'>
-                <a href='#' target='_blank'><i class='fa fa-facebook'></i></a>
-              </div>
-              <div class='a git'>
-                <a href='#' target='_blank'><i class='fa fa-github'></i></a>
-              </div>
-            </div> 
-
-            <div class='frame'>
-              <img src='./img/moldura.png'>
-              <div class='a face'>
-                <a href='#' target='_blank'><i class='fa fa-facebook'></i></a>
-              </div>
-              <div class='a git'>
-                <a href='#' target='_blank'><i class='fa fa-github'></i></a>
+                <a href='http://github.com/yanjustino' target='_blank'><i class='fa fa-github'></i></a>
               </div>
             </div>
+
+            <div class='frame'>
+              <canvas id="canvas-davidwebmaster" width="214" height="245"></canvas>
+              <div class='a face'>
+                <a href='http://facebook.com/davidwebmaster' target='_blank'><i class='fa fa-facebook'></i></a>
+              </div>
+              <div class='a git'>
+                <a href='http://github.com/davidwebmaster' target='_blank'><i class='fa fa-github'></i></a>
+              </div>
+            </div>
+
+            <div class='frame'>
+              <canvas id="canvas-batusa" width="214" height="245"></canvas>
+              <div class='a face'>
+                <a href='http://facebook.com/batusa' target='_blank'><i class='fa fa-facebook'></i></a>
+              </div>
+              <div class='a git'>
+                <a href='http://github.com/batusa' target='_blank'><i class='fa fa-github'></i></a>
+              </div>
+            </div>
+
+            <div class='frame'>
+              <canvas id="canvas-wanderleypassos" width="214" height="245"></canvas>
+              <div class='a face'>
+                <a href='http://facebook.com/wanderleypassos' target='_blank'><i class='fa fa-facebook'></i></a>
+              </div>
+              <div class='a git'>
+                <a href='http://github.com/wanderleypassos' target='_blank'><i class='fa fa-github'></i></a>
+              </div>
+            </div>
+
           </div>
         </div> <!-- #organizers -->
       
@@ -343,7 +351,7 @@
           </div>
 
           <div class='map'>
-            <iframe src='https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d15878.96601926203!2d-35.2972329!3d-5.750303499999999!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spt-BR!2sbr!4v1426352941168' width='100%' height='300px' frameborder='0' style='border:0'></iframe>
+            <iframe class="scrolloff" id="map-canvas" src='https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d15878.96601926203!2d-35.2972329!3d-5.750303499999999!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spt-BR!2sbr!4v1426352941168' width='100%' height='300px' frameborder='0' style='border:0'></iframe>
           </div>
         </div> <!-- #place -->
 
@@ -358,5 +366,8 @@
       </div> <!-- #footer -->
 
     </section>
+
+    <script src='http://code.jquery.com/jquery-1.11.2.min.js'></script>
+    <script src='js/main.js'></script>
   </body>
 </html>
