--- a/index.html
+++ b/index.html
@@ -255,7 +255,10 @@
         <h3 id='organizers-h3'>ORGANIZADORES</h3>
         <div id="organizers-person">
           <div class='frame' data-sr="enter top move 150px, over 0.5s, reset">
-            <canvas id="canvas-henricavalcante" width="214" height="218"></canvas>
+            <div class="organizers-img">
+              <img src="https://avatars.githubusercontent.com/u/2352034?v=3" class="avatar"/>
+              <img src="img/moldura.png" class="moldura"/>
+            </div>
             <div class="flex-container">
               <a href='http://facebook.com/henricavalcante' target='_blank'><i class='fa fa-facebook'></i></a>
               <a href='http://github.com/henricavalcante' target='_blank'><i class='fa fa-github'></i></a>
@@ -263,7 +266,10 @@
           </div>
 
           <div class='frame' data-sr="enter top move 150px, over 0.7s, reset">
-            <canvas id="canvas-yanjustino" width="214" height="218"></canvas>
+            <div class="organizers-img">
+              <img src="https://avatars.githubusercontent.com/u/357114?v=3" class="avatar"/>
+              <img src="img/moldura.png" class="moldura"/>
+            </div>
             <div class="flex-container">
               <a href='http://facebook.com/yanjustino' target='_blank'><i class='fa fa-facebook'></i></a>
               <a href='http://github.com/yanjustino' target='_blank'><i class='fa fa-github'></i></a>
@@ -271,7 +277,10 @@
           </div>
 
           <div class='frame' data-sr="enter top move 150px, over 0.9s, reset">
-            <canvas id="canvas-davidwebmaster" width="214" height="218"></canvas>
+            <div class="organizers-img">
+              <img src="https://avatars.githubusercontent.com/u/3306913?v=3" class="avatar"/>
+              <img src="img/moldura.png" class="moldura"/>
+            </div>
             <div class="flex-container">
               <a href='http://facebook.com/davidwebmaster' target='_blank'><i class='fa fa-facebook'></i></a>
               <a href='http://github.com/davidwebmaster' target='_blank'><i class='fa fa-github'></i></a>
@@ -279,7 +288,10 @@
           </div>
 
           <div class='frame' data-sr="enter top move 150px, over 1.1s, reset">
-            <canvas id="canvas-batusa" width="214" height="218"></canvas>
+            <div class="organizers-img">
+              <img src="https://avatars.githubusercontent.com/u/5388003?v=3" class="avatar"/>
+              <img src="img/moldura.png" class="moldura"/>
+            </div>
             <div class="flex-container">
               <a href='http://facebook.com/batusa' target='_blank'><i class='fa fa-facebook'></i></a>
               <a href='http://github.com/batusa' target='_blank'><i class='fa fa-github'></i></a>
@@ -287,7 +299,10 @@
           </div>
 
           <div class='frame' data-sr="enter top move 150px, over 1.3s, reset">
-            <canvas id="canvas-wanderleypassos" width="214" height="218"></canvas>
+            <div class="organizers-img">
+              <img src="https://avatars.githubusercontent.com/u/9213655?v=3" class="avatar"/>
+              <img src="img/moldura.png" class="moldura"/>
+            </div>
             <div class="flex-container">
               <a href='http://facebook.com/wanderleypassos' target='_blank'><i class='fa fa-facebook'></i></a>
               <a href='http://github.com/wanderleypassos' target='_blank'><i class='fa fa-github'></i></a>
