nome dos organizadores

--- a/index.html
+++ b/index.html
@@ -258,6 +258,7 @@
             <div class="organizers-img">
               <img src="https://avatars.githubusercontent.com/u/2352034?v=3" class="avatar"/>
               <img src="img/moldura.png" class="moldura"/>
+              <div class="nome"><span class="first-name">Henri</span>Cavalcante</div>
             </div>
             <div class="flex-container">
               <a href='http://facebook.com/henricavalcante' target='_blank'><i class='fa fa-facebook'></i></a>
@@ -269,6 +270,7 @@
             <div class="organizers-img">
               <img src="https://avatars.githubusercontent.com/u/357114?v=3" class="avatar"/>
               <img src="img/moldura.png" class="moldura"/>
+              <div class="nome"><span class="first-name">Yan</span>Justino</div>
             </div>
             <div class="flex-container">
               <a href='http://facebook.com/yanjustino' target='_blank'><i class='fa fa-facebook'></i></a>
@@ -280,9 +282,10 @@
             <div class="organizers-img">
               <img src="https://avatars.githubusercontent.com/u/3306913?v=3" class="avatar"/>
               <img src="img/moldura.png" class="moldura"/>
+              <div class="nome"><span class="first-name">David</span>Figueiredo</div>
             </div>
             <div class="flex-container">
-              <a href='http://facebook.com/davidwebmaster' target='_blank'><i class='fa fa-facebook'></i></a>
+              <a href='http://facebook.com/david.figueiredo.74' target='_blank'><i class='fa fa-facebook'></i></a>
               <a href='http://github.com/davidwebmaster' target='_blank'><i class='fa fa-github'></i></a>
             </div>
           </div>
@@ -291,9 +294,10 @@
             <div class="organizers-img">
               <img src="https://avatars.githubusercontent.com/u/5388003?v=3" class="avatar"/>
               <img src="img/moldura.png" class="moldura"/>
+              <div class="nome"><span class="first-name">Emmerson</span>Siqueira</div>
             </div>
             <div class="flex-container">
-              <a href='http://facebook.com/batusa' target='_blank'><i class='fa fa-facebook'></i></a>
+              <a href='http://facebook.com/emmerson.siqueira' target='_blank'><i class='fa fa-facebook'></i></a>
               <a href='http://github.com/batusa' target='_blank'><i class='fa fa-github'></i></a>
             </div>
           </div>
@@ -302,6 +306,7 @@
             <div class="organizers-img">
               <img src="https://avatars.githubusercontent.com/u/9213655?v=3" class="avatar"/>
               <img src="img/moldura.png" class="moldura"/>
+              <div class="nome"><span class="first-name">Wanderley</span>Passos</div>
             </div>
             <div class="flex-container">
               <a href='http://facebook.com/wanderleypassos' target='_blank'><i class='fa fa-facebook'></i></a>
