alteração das datas e logo da casa do codigo

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <div class='logo'>
             <img src='img/logo.png' alt='logo'>  
           </div>
-          <span>14 e 15 de julho • Instituto Metrópole Digital • Natal RN</span>
+          <span>04 e 05 de julho • Instituto Metrópole Digital • Natal RN</span>
         </div>
 
         <div id='sun'></div>
@@ -225,7 +225,7 @@
 
               <div class='ctBall' style='width: 100px;' data-sr="scale up 50%, over 1.5s, reset">
                 <div class='ball' style='background: #e9d6a0; box-shadow: 0 0 0 3px #e9d6a0; width: 100px; height: 100px; font-size: 20px;'>
-                  <a href="http://www.eventick.com.br/hackathon2015" class='middle'><div style='width: 100px;'>CLIQUE AQUI</div></a>
+                  <a href="http://www.eventick.com.br/hackathon2015" class='middle'><div style='width: 100px;'>EM BREVE</div></a>
                 </div>
               </div>
 
@@ -245,7 +245,10 @@
               <img src='img/ufrn.png' alt='UFRN'>
             </div>
             <div>
-              <img src='img/microsoft.png' alt='MS'>
+              <img src='img/microsoft.png' alt='Microsoft'>
+            </div>
+            <div>
+              <img src='img/cdc-logo-novo-300.png' alt='Casa do código'>
             </div>
           </div>
         </div>
