adicionado a campanha do leokz e patrocinadores wiquadro e eventick.

--- a/index.html
+++ b/index.html
@@ -231,6 +231,7 @@
 
             </div>
           </div>
+          <div class="leokz">* Todo o dinheiro arrecadado das inscrições será destinado para a <a href="http://leokz.com/campanha/">campanha do Leonardo Konarzewski</a></div>
         </div>
       </section>
 
@@ -249,6 +250,12 @@
             </div>
             <div>
               <img src='img/cdc-logo-novo-300.png' alt='Casa do código'>
+            </div>
+            <div>
+              <img src='img/wiquadro.png' alt='Wiquadro'>
+            </div>
+            <div>
+              <img src='img/eventick.png' alt='Eventick'>
             </div>
           </div>
         </div>
