alterado css para o site ficar usável em tablets

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
       </section>
 
-      <section id='participants' class="flex-container">
+      <section id='participants'>
         <h3 id='participants-h3'>QUEM PODE PARTICIPAR</h3>
         <div>
 
@@ -92,69 +92,68 @@
             DIA 1
           </div>
 
-          
-          <div class='event' data-sr="move 16px scale up 20%, over 2s, reset">
+          <div class='event' data-sr="roll -10deg, scale up 20%, over 2s, reset">
               <div class='text'>
                 <div class='middle'>
                   Credenciamento
                 </div> 
               </div>
-              <div class='hour'>07:00</div>
+              <div class='hour' title="Credenciamento">07:00</div>
               <span class='line'></span>
               <div class='point'></div>
           </div>
           
-          <div class='event' data-sr="move 16px scale up 20%, over 2s, reset">
+          <div class='event' data-sr="roll 10deg, scale up 20%, over 2s, reset">
               <div class='text'>
                 <div class='middle'>
                   Apresentação do Hackathon
                 </div>
               </div>
-              <div class='hour'>08:00</div>
+              <div class='hour' title="Apresentação do Hackathon">08:00</div>
               <span class='line'></span>
               <div class='point'></div>
           </div>
 
-          <div class='event' data-sr="move 16px scale up 20%, over 2s, reset">
+          <div class='event' data-sr="roll -10deg, scale up 20%, over 2s, reset">
               <div class='text'>
                 <div class='middle'>
                   Formação dos grupos
                 </div> 
               </div>
-              <div class='hour'>09:30</div>
+              <div class='hour' title="Formação dos grupos">09:30</div>
               <span class='line'></span>
               <div class='point'></div>
           </div>
 
-          <div class='event' data-sr="move 16px scale up 20%, over 2s, reset">
+          <div class='event' data-sr="roll 10deg, scale up 20%, over 2s, reset">
               <div class='text'>
                 <div class='middle'>
                   Sorteio e apresentação<br>da proposta do projeto
                 </div>
               </div>
-              <div class='hour'>10:30</div>
+              <div class='hour' title="Sorteio e apresentação da proposta do projeto">10:30</div>
               <span class='line'></span>
               <div class='point'></div>
           </div>
 
-           <div class='event' data-sr="move 16px scale up 20%, over 2s, reset">
+           <div class='event' data-sr="roll -10deg, scale up 20%, over 2s, reset">
               <div class='text'>
                 <div class='middle'>
                   Almoço
                 </div> 
               </div>
-              <div class='hour'>12:00</div>
+              <div class='hour' title="Almoço">12:00</div>
               <span class='line'></span>
               <div class='point'></div>
           </div>
 
-          <div class='event' data-sr="move 16px scale up 20%, over 2s, reset">
+          <div class='event' data-sr="roll 10deg, scale up 20%, over 2s, reset">
               <div class='text'>
                 <div class='middle'>
                   Início da competição
                 </div>
               </div>
-              <div class='hour'>14:00</div>
+              <div class='hour' title="Início da competição">14:00</div>
               <span class='line'></span>
               <div class='point'></div>
           </div>
@@ -163,41 +162,38 @@
             DIA 2
           </div>
 
-          <!-- Hu3 Hu3 Hu3--><br><br><br>
-
-           <div class='event' data-sr="move 16px scale up 20%, over 2s, reset">
+           <div class='event' data-sr="roll 10deg, scale up 20%, over 2s, reset">
               <div class='text'>
                 <div class='middle'>
                   Fim da competição
                 </div> 
               </div>
-              <div class='hour'>18:00</div>
+              <div class='hour' title="Fim da competição">18:00</div>
               <span class='line'></span>
               <div class='point'></div>
           </div>
 
-           <div class='event' data-sr="move 16px scale up 20%, over 2s, reset">
+           <div class='event' data-sr="roll -10deg, scale up 20%, over 2s, reset">
               <div class='text'>
                 <div class='middle'>
                   Julgamento dos Projetos
                 </div>
               </div>
-              <div class='hour'>18:00</div>
+              <div class='hour' title="Julgamento dos Projetos">18:00</div>
               <span class='line'></span>
               <div class='point'></div>
           </div>
 
-           <div class='event' data-sr="move 16px scale up 20%, over 2s, reset">
+           <div class='event' data-sr="roll 10deg, scale up 20%, over 2s, reset">
               <div class='text'>
                 <div class='middle'>
                   Divulgação do<br>resultado e premiação
                 </div> 
               </div>
-              <div class='hour'>19:00</div>
+              <div class='hour' title="Divulgação do resultado e premiação">19:00</div>
               <span class='line'></span>
               <div class='point'></div>
           </div>
-
 
        </div>
      </section>
@@ -236,7 +232,7 @@
       </section>
 
       <section id='sponsors' class="flex-container">
-        <div>
+        <div id="sponsors-div">
           <h3 id='sponsors-h3'>PATROCINADORES</h3>
           <div class='imgs'>
             <div>
@@ -264,7 +260,7 @@
       <section id='organizers' class="flex-container">
         <h3 id='organizers-h3'>ORGANIZADORES</h3>
         <div id="organizers-person">
-          <div class='frame' data-sr="enter top move 150px, over 0.5s, reset">
+          <div class='frame' data-sr="scale up 20%, over 0.5s, reset">
             <div class="organizers-img">
               <img src="https://avatars.githubusercontent.com/u/2352034?v=3" class="avatar"/>
               <img src="img/moldura.png" class="moldura"/>
@@ -276,7 +272,7 @@
             </div>
           </div>
 
-          <div class='frame' data-sr="enter top move 150px, over 0.7s, reset">
+          <div class='frame' data-sr="scale up 20%, over 0.7s, reset">
             <div class="organizers-img">
               <img src="https://avatars.githubusercontent.com/u/357114?v=3" class="avatar"/>
               <img src="img/moldura.png" class="moldura"/>
@@ -288,7 +284,7 @@
             </div>
           </div>
 
-          <div class='frame' data-sr="enter top move 150px, over 0.9s, reset">
+          <div class='frame' data-sr="scale up 20%, over 0.9s, reset">
             <div class="organizers-img">
               <img src="https://avatars.githubusercontent.com/u/3306913?v=3" class="avatar"/>
               <img src="img/moldura.png" class="moldura"/>
@@ -300,7 +296,7 @@
             </div>
           </div>
 
-          <div class='frame' data-sr="enter top move 150px, over 1.1s, reset">
+          <div class='frame' data-sr="scale up 20%, over 1.1s, reset">
             <div class="organizers-img">
               <img src="https://avatars.githubusercontent.com/u/5388003?v=3" class="avatar"/>
               <img src="img/moldura.png" class="moldura"/>
@@ -312,7 +308,7 @@
             </div>
           </div>
 
-          <div class='frame' data-sr="enter top move 150px, over 1.3s, reset">
+          <div class='frame' data-sr="scale up 20%, over 1.3s, reset">
             <div class="organizers-img">
               <img src="https://avatars.githubusercontent.com/u/9213655?v=3" class="avatar"/>
               <img src="img/moldura.png" class="moldura"/>
