add sponsor academia .net para zumbis

--- a/index.html
+++ b/index.html
@@ -253,6 +253,10 @@
             <div>
               <img src='img/eventick.png' alt='Eventick'>
             </div>
+            <br>
+            <div>
+              <img src="img/logo-zumbi.png" alt="Academia .net para Zumbis">
+            </div>
           </div>
         </div>
       </section>
