--- a/index.html
+++ b/index.html
@@ -197,8 +197,18 @@
 
        </div>
      </section>
-      
-      <section id='sign-up' class="flex-container">
+     <section id="campaign">
+         <div id="campaign-div">
+            <h3 id="campaign-h3">CAMPANHA</h3>
+            <div id="campaign-leokz">
+                <img src="/img/leokz.png" />
+            </div>
+            <div id="campaign-video">
+                <iframe src="https://www.youtube.com/embed/cHHLQQ6Z-28" frameborder="0" allowfullscreen></iframe>
+            </div>
+        </div>
+     </section>
+     <section id='sign-up' class="flex-container">
         <div>
           <h3>INSCREVA-SE</h3>
           <div>
@@ -219,15 +229,21 @@
                 </div>
               </div>
 
-              <div class='ctBall' style='width: 100px;' data-sr="scale up 50%, over 1.5s, reset">
-                <div class='ball' style='background: #e9d6a0; box-shadow: 0 0 0 3px #e9d6a0; width: 100px; height: 100px; font-size: 20px;'>
-                  <a href="http://www.eventick.com.br/hackathon2015" class='middle'><div style='width: 100px;'>EM BREVE</div></a>
+              <div class='ctBall' style='width: 150px;' data-sr="scale up 50%, over 1.5s, reset">
+                <div class='ball' style='background: #e9d6a0; box-shadow: 0 0 0
+                    3px #e9d6a0; width: 150px; height: 150px; font-size: 20px;'>
+                  <a href="http://www.eventick.com.br/hackathon2015"
+                      class='middle'>CLIQUE AQUI<div style='width: 150px;'>
+                  </div></a>
                 </div>
               </div>
 
             </div>
           </div>
-          <div class="leokz">* Todo o dinheiro arrecadado das inscrições será destinado para a <a href="http://leokz.com/campanha/">campanha do Leonardo Konarzewski</a></div>
+          <div class="leokz">
+              * Todo o dinheiro arrecadado das inscrições será destinado para a
+              <a href="http://leokz.com/campanha/">campanha do Leonardo Konarzewski</a>
+          </div>
         </div>
       </section>
 
@@ -339,7 +355,7 @@
         </div>
 
         <div class='map'>
-          <iframe class="scrolloff" id="map-canvas" src='https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d15878.96601926203!2d-35.2972329!3d-5.750303499999999!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spt-BR!2sbr!4v1426352941168' width='100%' height='300px' frameborder='0' style='border:0'></iframe>
+          <iframe class="scrolloff" id="map-canvas" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3969.1675359760843!2d-35.20546850000003!3d-5.831991000000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7b2ff8f896e978b%3A0x79f9aec948e969a5!2sIMD!5e0!3m2!1sen!2s!4v1430073151837" width="100%" height="300px" frameborder="0" style="border:0"></iframe>
         </div>
       </section>
 
