removendo os hu3 hu3 hu3 br br br da seção about

--- a/index.html
+++ b/index.html
@@ -52,12 +52,13 @@
         <div>
           <h3>SOBRE O EVENTO</h3>
           <p>
-            Hackathon significa maratona de programação. O termo resulta de uma combinação <br>
-            das palavras inglesas “hack” (programar de forma excepcional) e “marathon” (maratona).<br>
-            O Hackathon é um evento que reúne programadores, designers e outros <br>
-            profissionais ligados ao desenvolvimento de software para uma maratona de <br>
-            programação, cujo objetivo é desenvolver um software que atenda <br>
-            a um fim específico ou projetos livres que sejam inovadores e utilizáveis.<br>
+            Hackathon significa maratona de programação. O termo resulta de uma
+            combinação das palavras inglesas “hack” (programar de forma excepcional)
+            e “marathon” (maratona).
+            O Hackathon é um evento que reúne programadores, designers e outros 
+            profissionais ligados ao desenvolvimento de software para uma maratona de 
+            programação, cujo objetivo é desenvolver um software que atenda
+            a um fim específico ou projetos livres que sejam inovadores e utilizáveis.
           </p>
         </div>
       </section>
@@ -201,7 +202,7 @@
          <div id="campaign-div">
             <h3 id="campaign-h3">CAMPANHA</h3>
             <div id="campaign-leokz">
-                <img src="/img/leokz.png" />
+                <img src="img/leokz.png" />
             </div>
             <div id="campaign-video">
                 <iframe src="https://www.youtube.com/embed/cHHLQQ6Z-28" frameborder="0" allowfullscreen></iframe>
