--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <div id='logo-nejs'>
           <div class='logo'>
-            <img src='img/logo.png' alt='logo'>  
+            <img src='img/logo.png' alt='logo'>
           </div>
           <span>04 e 05 de julho • Instituto Metrópole Digital • Natal RN</span>
         </div>
@@ -55,8 +55,8 @@
             Hackathon significa maratona de programação. O termo resulta de uma
             combinação das palavras inglesas “hack” (programar de forma excepcional)
             e “marathon” (maratona).
-            O Hackathon é um evento que reúne programadores, designers e outros 
-            profissionais ligados ao desenvolvimento de software para uma maratona de 
+            O Hackathon é um evento que reúne programadores, designers e outros
+            profissionais ligados ao desenvolvimento de software para uma maratona de
             programação, cujo objetivo é desenvolver um software que atenda
             a um fim específico ou projetos livres que sejam inovadores e utilizáveis.
           </p>
@@ -97,7 +97,7 @@
               <div class='text'>
                 <div class='middle'>
                   Credenciamento
-                </div> 
+                </div>
               </div>
               <div class='hour' title="Credenciamento">07:00</div>
               <span class='line'></span>
@@ -119,7 +119,7 @@
               <div class='text'>
                 <div class='middle'>
                   Formação dos grupos
-                </div> 
+                </div>
               </div>
               <div class='hour' title="Formação dos grupos">09:30</div>
               <span class='line'></span>
@@ -141,7 +141,7 @@
               <div class='text'>
                 <div class='middle'>
                   Almoço
-                </div> 
+                </div>
               </div>
               <div class='hour' title="Almoço">12:00</div>
               <span class='line'></span>
@@ -167,7 +167,7 @@
               <div class='text'>
                 <div class='middle'>
                   Fim da competição
-                </div> 
+                </div>
               </div>
               <div class='hour' title="Fim da competição">18:00</div>
               <span class='line'></span>
@@ -189,7 +189,7 @@
               <div class='text'>
                 <div class='middle'>
                   Divulgação do<br>resultado e premiação
-                </div> 
+                </div>
               </div>
               <div class='hour' title="Divulgação do resultado e premiação">19:00</div>
               <span class='line'></span>
@@ -252,30 +252,33 @@
         <div id="sponsors-div">
           <h3 id='sponsors-h3'>PATROCINADORES</h3>
           <div class='imgs'>
-            <div>
+            <a href="http://imd.ufrn.br" target="_blank">
               <img src='img/imd.png' alt='IMD'>
-            </div>
-            <div>
+            </a>
+            <a href="http://ufrn.br" target="_blank">
               <img src='img/ufrn.png' alt='UFRN'>
-            </div>
-            <div>
+            </a>
+            <a href="http://microsoft.com.br" target="_blank">
               <img src='img/microsoft.png' alt='Microsoft'>
-            </div>
-            <div>
+            </a>
+            <a href="http://casadocodigo.com.br" target="_blank">
               <img src='img/cdc-logo-novo-300.png' alt='Casa do código'>
-            </div>
-            <div>
+            </a>
+            <a href="http://wiquadro.com.br" target="_blank">
               <img src='img/wiquadro.png' alt='Wiquadro'>
-            </div>
-            <div>
+            </a>
+            <a href="http://eventick.com.br" target="_blank">
               <img src='img/eventick.png' alt='Eventick'>
-            </div>
-            <div>
+            </a>
+            <a href="https://www.youtube.com/watch?v=BVfcjLFRMaY" target="_blank">
               <img src="img/logo-zumbi.png" alt="Academia .net para Zumbis">
-            </div>
-            <div>
+            </a>
+            <a href="http://zofe.com.br" target="_blank">
+              <img src="img/zofe.png" alt="Novatec">
+            </a>
+            <a href="http://novatec.com.br" target="_blank">
               <img src="img/novatec.png" alt="Novatec">
-            </div>
+            </a>
           </div>
         </div>
       </section>
