--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html lang='pt-br'>
   <head>
     <meta charset='UTF-8'>
+    <meta property="og:title" content="Hackathon JavaScript 2015" />
+    <meta property="og:site_name" content="Hackathon NeJs 2015"/>
+    <meta property="og:url" content="http://nejs.github.io/hackathon2015/" />
+    <meta property="og:locale" content="pt_BR" />
+    <meta property="og:image" content="http://nejs.github.io/hackathon2015/img/logo.png" />
+    <meta property="og:description" content="Maratona de desenvovimento de softwares em JavaScript" />
     <title>Hackathon JavaScript 2015</title>
     <link href='http://fonts.googleapis.com/css?family=Roboto:100' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
