--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
              </ul>
            </div>
            <div id='face'>
-             <a href='http://facebook.com/nordestejs' target='_blank'><i class='fa fa-facebook'></i></a>
+               <a href='http://facebook.com/nordestejs' target='_blank'>
+                   <i class='fa fa-facebook'></i>
+               </a>
            </div>
         </nav>
 
@@ -75,14 +77,14 @@
 
           <div class='ct-img' data-sr="enter left move 200px, over 1s, reset">
             <div class='img'>
-              <img src='img/david.png'>
+              <img alt="Programadores" src='img/david.png'>
             </div>
             <span>PROGRAMADORES</span>
           </div>
 
           <div class='ct-img' data-sr="enter right move 200px, over 1s, reset">
             <div class='img'>
-              <img src='img/wanderley.png'>
+              <img alt="Designers" src='img/wanderley.png'>
             </div>
             <span>DESIGNERS</span>
           </div>
@@ -285,7 +287,10 @@
             <a href="http://novatec.com.br" target="_blank">
               <img src="img/novatec.png" alt="Novatec">
             </a>
-          </div>
+             <a href="http://www.evolux.net.br/" target="_blank">
+              <img src="img/logo-evolux.svg" alt="Evolux">
+            </a>
+         </div>
         </div>
       </section>
 
