link do edital no site melhorado =)

--- a/index.html
+++ b/index.html
@@ -252,8 +252,9 @@
         <div class="leokz">
           * Todo o dinheiro arrecadado das inscrições será destinado para a
           <a href="http://leokz.com/campanha/">campanha do Leonardo Konarzewski</a>
-          <br><a
-            href="https://github.com/nejs/hackathon2015-docs/blob/master/edital.md">Edital</a>
+          <br>* Para ler o edital com as regras do evento <a
+            href="https://github.com/nejs/hackathon2015-docs/blob/master/edital.md">Clique
+          Aqui</a>
         </div>
       </div>
       </section>
