--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
             <img src="img/logo-evolux.svg" alt="Evolux">
           </a>
           <a href="" target="_blank">
-            <img src="img/jorval.png" alt="Jorfal Publicidade">
+            <img src="img/jorfal.png" alt="Jorfal Publicidade">
           </a>
         </div>
       </div>
